replace JDK ModuleInfoExtender by own ASM6 based implementation